--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -54,7 +54,7 @@
 	<link rel="stylesheet" type="text/css" href="design/css/normalize.css" media="all">
 	<link rel="stylesheet" type="text/css" href="design/vendor/ss-social-regular/ss-social-regular.css" media="all">	
 	<link rel="stylesheet" type="text/css" href="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.css" media="all">
-	<link rel="stylesheet" type="text/css" href="design/css/tosser.css" media="all">
+	<link rel="stylesheet" type="text/css" href="design/css/dude.css" media="all">
 			
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->	
 	<!--[if lt IE 8]><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script><![endif]-->
@@ -75,9 +75,9 @@
 
 <article id="contact">
 	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
-	<h2>Let&rsquo;s begin.</h2>
+	<h2>Woooo!</h2>
 	
-	<p>To book me for a speaking engagement, <a href="mailto:will@willdayble.com">email</a> is best.</p>
+	<p>To book me for <a href="speaking">speaking,</a> email is best.</p>
 
 	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
