--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -54,7 +54,7 @@
 	<link rel="stylesheet" type="text/css" href="design/css/normalize.css" media="all">
 	<link rel="stylesheet" type="text/css" href="design/vendor/ss-social-regular/ss-social-regular.css" media="all">	
 	<link rel="stylesheet" type="text/css" href="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.css" media="all">
-	<link rel="stylesheet" type="text/css" href="design/css/tosser.css" media="all">
+	<link rel="stylesheet" type="text/css" href="design/css/dude.css?1" media="all">
 			
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->	
 	<!--[if lt IE 8]><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script><![endif]-->
@@ -82,30 +82,16 @@
 
 
 <article id="home">	
-	<h2>Hello, internet.</h2>
-	<p>I deliver <a href="speaking">keynotes</a> to big companies and <a href="work">start small</a> ones.</p>
-	<p><a href="contact">Book me</a> to speak at your next event.</p>
+	<h2>Hello internet!</h2>
+	<p>I do some quite shitty <a href="wood">woodworking</a> and pretty decent <a href="speaking">keynotes.</a></p>
+	<p>In my spare time I don&rsquo;t have any.</p>
 	<nav>
+	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	
 	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="love">Testimonials <i class="ss-right"></i></a></p>	  
 	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>
-	</nav> 		
-		
-	<p>If you’re a founder and want advice, book via office hours:</p>
-	<p><a target="_blank" class="btn btn-icon" href="http://officehours.startupvictoria.com.au/#pt-section-25" target="_blank"><i class="ss-right"></i> Book via Startup Victoria</a></p>
+	</nav>
 
-</article>
-
-<article class="alt">
-	<blockquote class="left">
-		<p><span class="lquo">&ldquo;</span>Will is arguably one of the most amazing, inspiring and talented people in both our industry, and the wider community.</p>
-		<p>Work with him. You will not regret it.&rdquo;</p>
-		<cite>
-			<img src="design/images/people/charlie.png" alt="Charlie">
-			<a class="role" href="https://twitter.com/superhighfives">- Charlie Gleason</a>, 
-			<a class="" href="https://unbound.co.uk/">Head of Product, Unbound</a>
-		</cite>
-	</blockquote>
 </article>
 
 <article class="footer">
