--- a/htdocs/love.html
+++ b/htdocs/love.html
@@ -54,7 +54,7 @@
 	<link rel="stylesheet" type="text/css" href="design/css/normalize.css" media="all">
 	<link rel="stylesheet" type="text/css" href="design/vendor/ss-social-regular/ss-social-regular.css" media="all">	
 	<link rel="stylesheet" type="text/css" href="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.css" media="all">
-	<link rel="stylesheet" type="text/css" href="design/css/dude.css?1" media="all">
+	<link rel="stylesheet" type="text/css" href="design/css/dude.css?5" media="all">
 			
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->	
 	<!--[if lt IE 8]><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script><![endif]-->
@@ -70,32 +70,131 @@
 <![endif]-->
 
 
+<aside style="background-image:url(design/images/aside/love.gif);"></aside>
 
-<aside style="background-image:url(design/images/aside/work.gif);"></aside>
 
-<article id="work">
-	<a data-nav class="btn btn-back" href="/"><i class="ss-left"></i> Home</a>
+<article id="speaking">
+	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="speaking"><i class="ss-right"></i> Speaking</a>
-	<h2>Work</h2>
-	<p>I spend most of my time at <a href="//fitzroyacademy.com">The Fitzroy Academy.</a></p>
-	<div class="projects">
-		<a href="//fitzroyacademy.com"><img src="design/images/projects/fitzroy.png" alt="Fitzroy Academy"><strong>Fitzroy Academy</strong> <br>Founder</a>
-		<a href="//squareweave.com.au"><img src="design/images/projects/sqw.png" alt="Squareweave"><strong>Squareweave</strong> <br>Founder</a>
-		<a href="//cowalition.com"><img src="design/images/projects/cow.png" alt="Cowalition"><strong>The Cowalition</strong> <br>Founder</a>
-<!--
-		<a href="//gracefitzroy.com"><img src="design/images/projects/grace.png" alt="Grace"><strong>Grace Cafe</strong> <br>Founder</a>
-		<a href="//shift.vc"><img src="design/images/projects/shift.png" alt="Promo Bay"><strong>Shift</strong><br>Founder</a>	
-		<a href="//promobay.org"><img src="design/images/projects/tpb.png" alt="Promo Bay"><strong>The Promo Bay</strong><br>Founder</a>	
--->
-		<a href="//chuffed.org"><img src="design/images/projects/chuffed.jpg" alt="Chuffed"><strong>Chuffed</strong> <br>Advisory Board</a>
-		<a href="//growstuff.org/"><img src="design/images/projects/growstuff.png" alt="GrowStuff"><strong>GrowStuff</strong><br>Advisory Board</a>				
-		<a href="//fitnesseverywhe.re"><img src="design/images/projects/fitness.jpg" alt="Fitness"><strong>Fitness Everywhere</strong> <br>Chair / Advisor</a>
-	</div>
+
+	<h2>How awkward.</h2>
+	<h4>Testimonials are <em>weird.</em></h4>
+	<p>You&rsquo;re straight up asking people to say nice stuff about you in public. </p>
+	<p>Super weird. Here&rsquo;s a few. More <a href="https://www.linkedin.com/in/willdayble" target="_blank">on LinkedIn</a> if you&rsquo;re feeling stalky.</p>
 </article>
+
+
+
+<article class="alt">
+	<blockquote class="left">
+		<p><span class="lquo">&ldquo;</span>Will is like an explosion of colour.</p>
+		<p>His enthusiasm is only matched by his expertise, and I find myself regularly asking "What would Will do?"</p>
+		<p>Everything he makes is a feast for the senses.</p>
+		<p>Will is arguably one of the most amazing, inspiring and talented people in both our industry, and the wider community.&rdquo;</p>
+		<cite>
+			<img src="design/images/people/charlie.png" alt="Charlie">
+			- Charlie Gleason,
+			<a class="" href="https://unbound.co.uk/">Head of Product, Unbound</a>
+		</cite>
+	</blockquote>
+</article>
+
+<article class="">
+	<blockquote>
+		<p><span class="lquo">&ldquo;</span>Will is my wild-card.<br class="sm"> He delivers, every single time.&rdquo;</p>
+		<cite>
+			<img src="design/images/people/jason.png" alt="Jase">
+			- Dr. Jason Fox, 
+			<a href="http://www.drjasonfox.com/">Keynote Speaker of the Year</a>
+		</cite>
+	</blockquote>		
+</article>				
+
+<article class="alt">
+	<blockquote class="left">
+		<p><span class="lquo">&ldquo;</span>I have received all kinds of advice over the years but it was 5 minutes with Will that proved to be the most valuable.&rdquo;</p>
+		<cite>
+			<img src="design/images/people/ash.jpg" alt="ash">
+			- Ashleigh Grogan, employee @ <a href="https://squareweave.com.au">Squareweave</a>.
+		</cite>
+	</blockquote>		
+</article>	
+
+<article class="">
+	<blockquote class="left">
+		<p><span class="lquo">&ldquo;</span>Will has a formula for producing great work: he understands your needs, spins it around and makes you articulate them better. Then he meticulously, relentlessly and rapidly executes on this knowledge.&rdquo;</p>
+		<cite>
+			<img src="design/images/people/olivier.jpg" alt="Jase">		
+			- Oliver Yiptong, 
+			<a href="https://www.linkedin.com/in/oyiptong">AirBnb.</a>
+		</cite>
+	</blockquote>		
+</article>		
+
+
+<article class="alt">
+	<blockquote class="left">
+		<p><span class="lquo">&ldquo;</span>Working with Will was a true pleasure. He ensures everyone feels important and valued. He&rsquo;s a natural leader that I would be willing to work with and for anytime.&rdquo;</p>
+		<cite>
+		<img src="design/images/people/simon.jpg" alt="Simon">	
+			- Simon Court, Hackathon collaborator @ Startup Weekend.
+		</cite>
+	</blockquote>		
+</article>
+
+<article class="">
+	<blockquote>
+		<p><span class="lquo">&ldquo;</span>Practically all situations benefit<br> from Will&rsquo;s involvement.&rdquo;</p>
+		<cite>
+			<img src="design/images/people/frenchie.jpg" alt="buddy">
+			- Frenchie. Dear friend, 
+			<a href="https://www.linkedin.com/in/sampstewart">InfoSec, VC and People Geek.</a>
+		</cite>
+	</blockquote>		
+</article>		
+
+<article class="alt">
+	<blockquote class="left">
+		<p><span class="lquo">&ldquo;</span>Put simply, Will is incredible. In his role as a mentor Wills honesty, openness and kindness know no bounds. Despite his endlessly jam-packed schedule he always took the time to help &amp; relate.</p>
+		<p>This combined with his extensive expertise and uncanny ability to give empathetic advice, make him second to none.&rdquo;</p>
+		<cite>
+			<img src="design/images/people/tim.jpg" alt="Tim">					
+			- Tim Grut, <a href="https://fitzroyacademy.com">Fitzroy Academy</a> student
+		</cite>
+	</blockquote>		
+</article>
+
+<article class="">
+	<blockquote class="">
+		<p><span class="lquo">&ldquo;</span>It&rsquo;s simply not possible to obtain the same caliber of quality and craftsmanship from anyone else.&rdquo;</p>
+		<cite>
+			<img src="design/images/people/michelle.jpg" alt="buddy">		
+			- Michelle Steigerwalt, 
+			<a href="https://www.linkedin.com/in/msteigerwalt" target="_blank">Software Framework Architect.</a>
+		</cite>
+	</blockquote>		
+</article>	
+
+
+<article class="alt">
+	<blockquote class="left">
+		<p><span class="lquo">&ldquo;</span>An hour of talking to Will was more valuable than months of conversations with other people. He is honest, funny, astute and unbelievably generous.&rdquo;</p>
+		<cite>
+			<img src="design/images/people/melissa.png" alt="Melissa">
+			- Melissa Ng, Founder,
+			<a href="http://melewi.net/">Melewi</a>
+		</cite>
+	</blockquote>		
+</article>		 
 
 <article class="footer">
 	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
 	<img src="design/images/aside/yeah.gif">
+</article>
+
+<article id="speaking">
+
+	<h2>I hope that was as awkward for you as it was for me. -W. :)</h2>
 </article>
 
 
