--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -54,7 +54,7 @@
 	<link rel="stylesheet" type="text/css" href="design/css/normalize.css" media="all">
 	<link rel="stylesheet" type="text/css" href="design/vendor/ss-social-regular/ss-social-regular.css" media="all">	
 	<link rel="stylesheet" type="text/css" href="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.css" media="all">
-	<link rel="stylesheet" type="text/css" href="design/css/tosser.css" media="all">
+	<link rel="stylesheet" type="text/css" href="design/css/dude.css?1" media="all">
 			
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->	
 	<!--[if lt IE 8]><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script><![endif]-->
@@ -70,24 +70,28 @@
 <![endif]-->
 
 
+<aside class="wanker"></aside>
 
-<aside class="smirk"></aside>
 
 <article id="speaking">
 	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="#speaker-bio"><i class="ss-right"></i> Speaker Bio</a>
 
-	<h2>Speaking.</h2>
+	<h2>Blah blah.</h2>
 	<p>I fly around the world and make flappy noises with my lips to motivate large crowds of people, which is a very odd thing to do if you think about it.</p>
-	<p>For bookings, get <a href="contact">in touch directly</a>.</p>
+	<p>I&rsquo;m usually booked when a no-flowery-bullshit approach is required to helping people take action on the stuff that matters.</p> 
+	<p>For bookings, get <a href="contact">in touch.</a></p>
 	<nav>
-	  <p><a data-nav class="btn" href="#speaker-themes">Themes <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="#speaker-themes">Popular Themes <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#speaker-bio">Biography <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#pics">Pictures <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="#speaker-rider">Rider <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="contact">Book me <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="#love">Testimonials <i class="ss-right"></i></a></p>	  
+	  <p><a data-nav class="btn" href="#speaker-rider">Rider / AV / etc. <i class="ss-right"></i></a></p>
+	  <p><a data-nav class="btn" href="contact">Bookings <i class="ss-right"></i></a></p>
 	</nav> 	
 </article>
+
+
 
 <article class="alt">
 	<blockquote>
@@ -107,8 +111,9 @@
 	<a data-nav class="btn btn-next" href="#speaker-bio"><i class="ss-right"></i> Speaker Bio</a>
 	
 	<h3>Themes</h3>
-	<p>I am most often booked for <em>provocations</em>. New beginnings, with a caffeinated audience, willing to stretch beyond the immediate.</p>
-	<p>Common themes include:</p>
+	<p>I am almost always booked for <em>&lsquo;provocations.&rsquo;</em></p>
+	<p>That apparently means I wave my arms around and get everyone worked up.</p>
+	<h4>Common themes:</h4>
 	<dl>
 		<dt>1</dt><dd>Technology will eat everything: Where tech is taking us and what this means for normal people who don't own the robots;</dd>
 		<dt>2</dt><dd>Disruption / transformation: What the buzzwords <em>actually</em> mean, when to be scared, and what it means for leadership;</dd>
@@ -142,8 +147,8 @@
 	<h3>Longer</h3>
 	<p>Will made his first dollar selling stolen lemons at age 6. His father taught him to code a year later. He's since founded multiple companies in digital, education and social enterprise.</p>
 	<p>He&rsquo;s founded a <a href="http://squareweave.com.au/" target="_blank">digital agency</a>, an <a href="http://cowalition.com/" target="_blank">NGO</a> that helps small plot Cambodian farmers out of poverty, and an <a href="https://fitzroyacademy.com/" target="_blank">online education platform</a> for social impact people. 
-	<p>As an experienced speaker and facilitator, he&rsquo;s covered topics from entrepreneurship and innovation to near-futurism and tech trends, in formats ranging from auditorium-filling keynotes to intimate masterclasses and executive roundtables.</p>
-	<p>He sits on the boards of a few Australian businesses and mentors numerous young people in local and international startup communities.</p>
+	<p>Speaking across the world, from auditorium-filling keynotes to intimate masterclasses and executive roundtables, Will helps tiny and huge organisations to take action on the difficult stuff.</p>
+	<p>He sits on the boards of a few Aussie businesses and mentors numerous folks in local and international startup communities.</p>
 	<p>In his spare time, Will doesn’t have any.</p>		
 	<hr id="pics">
 	<h3>Hi res pics</h3>
@@ -172,14 +177,22 @@
 		<p>Photo credits: <a target="_blank" href="https://www.instagram.com/leo_flander/">Leo Flander</a> (1 & 2), Will Coverdale (3 & 4) and <a href="http://www.marklobo.com.au/" target="_blank">Mark Lobo</a> (5).</p>
 	</p>
 	
+	<hr id="love">
+	<h3>Testimonials</h3>
+	<p>Testimonials are weird because you&rsquo;re straight up asking good people to say nice stuff about you in public.</p>
+	<nav>
+	  <p><a data-nav class="btn" href="love">Here&rsquo;s a whole page of them. <i class="ss-right"></i></a></p>	  
+	</nav>
+
+	
 </article>	
 
 <article class="alt">
 	<blockquote>
 		<p><span class="lquo">&ldquo;</span>Practically all situations benefit<br> from Will&rsquo;s involvement.&rdquo;</p>
 		<cite>
-			- Frenchy, 
-			<a href="https://www.linkedin.com/in/sampstewart">Security specialist.</a>
+			- Frenchie, 
+			<a href="https://www.linkedin.com/in/sampstewart">InfoSec, VC and People Geek.</a>
 		</cite>
 	</blockquote>		
 </article>		
@@ -195,7 +208,7 @@
 	<p>Please read this carefully, and get in touch if I can help out in any way.</p>
 	<h3>Gender diversity</h3>
 	<p>First up: I will not speak at any event with only male speakers, nor will I be part of a panel with only male presenters. This is non-negotiable. </p> 
-	<p>If you&rsquo;re putting together an event and want some diversity, hit me up and I can possibly help you source some great people!</p>
+	<p>If you&rsquo;re putting together an event and want some interesting speakers, hit me up and I can absolutely help you source some great talent!</p>
 	<p>See <a href="http://speakerdiversity.com" target="_blank">speakerdiversity.com</a> for more on this.</p>
 
 	<h3>Audio visual</h3>
@@ -204,7 +217,7 @@
 	<p>My laptop - or the speaker monitor - should be positioned to the side of the stage, within easy view of the most distant place I will be standing on the stage. I move around a lot.</p>
 	<p>For groups of more than about 20 people I prefer a wireless lavalier or head mic. I dance about and wave my arms, which doesn’t work with a handheld mic and is impossible behind a podium. </p>
 	<p>Have a clear, open stage area. I don’t hide behind podiums or sit on chairs, so we don’t need any of those things on the stage during my talk.</p>
-	<p>Tech glitches are never fun, so I will work with your tech team on an A/V check, preferably 20-30 minutes before I go on stage.</p>
+	<p>Tech glitches are never fun, so I will work with your tech team on an A/V check, preferably 30 minutes before I hit the stage.</p>
 	<h3>Slides and handouts</h3>
 	<p>I do not convert my presentations to any standard template. My slides are purposefully crafted for each event, to match the content I deliver on the day.</p>
 	<p>I will sometimes supply clients with a copy of my slides in PDF format to distribute to delegates after the event, just ask.</p>
@@ -217,10 +230,10 @@
 	<p>I will not wear a suit and I will probably swear a few times.</p>
 	<h3>Logistics</h3>
 	<p>To build anticipation and to give time for a thorough audiovisual check, it’s best to schedule a short break before I hit the stage. At the least, ask the event MC to get the audience to stand up and move around.</p>
-	<p>Scheduling a break directly after my presentation means people can share “aha” moments and discuss things they just learned. This is where knowledge cements.</p>
-	<p>Airlines can be screwy, so when possible I like to arrive the night before the event, and rest well. Please arrange or recommend a non-smoking room close to the venue.</p>
-	<p>I like to speak to any executives and stakeholders before the event. Dinner the night before is lovely. This helps me to tune in with the group and their goals.</p>
-	<p>If you’d like me to hang around and be sociable afterwards, let me know. Often, the best learning happens in conversations after the main event is all wrapped up.</p>
+	<p>Scheduling a break directly after my presentation means people can share “aha” moments and discuss the provocation.</p>
+	<p>Airlines can be screwy, so when possible I like to arrive the night before the event, and rest well. Please arrange or recommend somewhere walking distance from the venue.</p>
+	<p>I like to informally chat to execs and key stakeholders before the event. Dinner the night before is lovely. This helps me to tune in with the group and their goals.</p>
+	<p>If you’d like me to hang around and be sociable, just say. As we all know, the real moments happen in conversations after the big event is all wrapped up.</p>
 	<p>Tip: Overbooking a small room is much better than rattling around in a big one, and can have a big impact on how delegates remember the success of the event.</p>	
 
 
