--- a/htdocs/wood.html
+++ b/htdocs/wood.html
@@ -54,7 +54,7 @@
 	<link rel="stylesheet" type="text/css" href="design/css/normalize.css" media="all">
 	<link rel="stylesheet" type="text/css" href="design/vendor/ss-social-regular/ss-social-regular.css" media="all">	
 	<link rel="stylesheet" type="text/css" href="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.css" media="all">
-	<link rel="stylesheet" type="text/css" href="design/css/tosser.css" media="all">
+	<link rel="stylesheet" type="text/css" href="design/css/dude.css" media="all">
 			
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->	
 	<!--[if lt IE 8]><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script><![endif]-->
@@ -71,8 +71,7 @@
 
 
 
-<aside class="wood">
-</aside>
+<aside class="wood"></aside>
 
 <article id="speaking">
 	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
@@ -80,11 +79,11 @@
 
 		<h2>Got wood?</h2>
 
-		<h3>I am renovating a house. </h3>
-		<p>The wooden bits of this stupid house should be made mostly from recycled and / or reclaimed material, because ENVIRONMENT and shit.</p>
+		<h3>I am slowly renovating my house. </h3>
+		<p>It&rsquo;s in Melbourne, and I want to use recycled and / or reclaimed material, because of the ENVIRONMENT and stuff.</p>
 		<p>If you can give me your wood, I will gladly take it all.</p>
 		<p>I&rsquo;ll even give you pictures of what I do with it.</p>
-		<p>I live in central Melbourne, but I have a big white van and can travel.</p>
+		<p>I can pick stuff up in my van.</p>
 		<hr>
 		<h3>How I&rsquo;ll use your wood:</h3>
 		<dl>
@@ -99,7 +98,8 @@
 			<dt>8</dt><dd>Rooftop garden decking;</dd>						
 			<dt>10</dt><dd>Other things I&rsquo;ve not thought of yet.</dd>
 		</dl>
-	<h3>Tell me about your wood</h3>
+	<h3>Tell me about your wood!</h3>
+	<p>I will come and get it from you.</p>
 	<p><a target="_blank" class="btn btn-icon" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a></p>
 	<p><a target="_blank" class="btn btn-icon" href="//twitter.com/willdayble"><i class="ss-social-regular ss-twitter"></i> @willdayble</a></p>
 
