--- a/htdocs/love.html
+++ b/htdocs/love.html
@@ -80,7 +80,7 @@
 	<h2>How awkward.</h2>
 	<h4>Testimonials are <em>weird.</em></h4>
 	<p>You&rsquo;re straight up asking people to say nice stuff about you in public. </p>
-	<p>Super weird. Here&rsquo;s a few. More <a href="https://www.linkedin.com/in/willdayble" target="_blank">on LinkedIn</a> if you&rsquo;re feeling stalky.</p>
+	<p>Super confusing. Here&rsquo;s a few. More <a href="https://www.linkedin.com/in/willdayble" target="_blank">on LinkedIn</a> if you&rsquo;re feeling stalky.</p>
 </article>
 
 
@@ -194,7 +194,11 @@
 
 <article id="speaking">
 
-	<h2>I hope that was as awkward for you as it was for me. -W. :)</h2>
+	<h3>I sincerely hope that this was as <br class="sm">awkward for you as it was for me.</h3>
+	<p>But seriously, if you want a testimonial, take mine:</p>
+	<p><a href="http://luke.gg/" target="_blank">Luke Giuliani</a> is my dear friend and partner in crime.</p>
+	<p>He&rsquo;s also one of the most steadfast, ethical, blindingly intelligent and profoundly caring people you&rsquo;ll ever meet. A hidden gem who doesn&rsquo;t toot his own horn.</p>
+	<p>Go make friends with him. &lt;3</p>
 </article>
 
 
