--- a/htdocs/love.html
+++ b/htdocs/love.html
@@ -77,10 +77,10 @@
 	<a data-nav class="btn btn-back" href="/#"><i class="ss-left"></i> Home</a>
 	<a data-nav class="btn btn-next" href="speaking"><i class="ss-right"></i> Speaking</a>
 
-	<h2>How awkward.</h2>
-	<h4>Testimonials are <em>weird.</em></h4>
-	<p>You&rsquo;re straight up asking people to say nice stuff about you in public. </p>
-	<p>Super confusing. Here&rsquo;s a few. More <a href="https://www.linkedin.com/in/willdayble" target="_blank">on LinkedIn</a> if you&rsquo;re feeling stalky.</p>
+	<h2>Testimonials.</h2>
+	<h4>Testimonials are <em>mega awkward.</em></h4>
+	<p>It&rsquo;s straight up asking people to say nice stuff about you in public. Weeeeird.</p>
+	<p>Here&rsquo;s a few. More <a href="https://www.linkedin.com/in/willdayble" target="_blank">on LinkedIn</a> if you&rsquo;re feeling stalky.</p>
 </article>
 
 
@@ -88,9 +88,7 @@
 <article class="alt">
 	<blockquote class="left">
 		<p><span class="lquo">&ldquo;</span>Will is like an explosion of colour.</p>
-		<p>His enthusiasm is only matched by his expertise, and I find myself regularly asking "What would Will do?"</p>
-		<p>Everything he makes is a feast for the senses.</p>
-		<p>Will is arguably one of the most amazing, inspiring and talented people in both our industry, and the wider community.&rdquo;</p>
+		<p>He&rsquo;s arguably one of the most amazing, inspiring and talented people in both our industry, and the wider community.&rdquo;</p>
 		<cite>
 			<img src="design/images/people/charlie.png" alt="Charlie">
 			- Charlie Gleason,
@@ -101,7 +99,7 @@
 
 <article class="">
 	<blockquote>
-		<p><span class="lquo">&ldquo;</span>Will is my wild-card.<br class="sm"> He delivers, every single time.&rdquo;</p>
+		<p><span class="lquo">&ldquo;</span>Will is my wild-card.<br class="sm"> He delivers, without fail, every time.&rdquo;</p>
 		<cite>
 			<img src="design/images/people/jason.png" alt="Jase">
 			- Dr. Jason Fox, 
@@ -112,17 +110,7 @@
 
 <article class="alt">
 	<blockquote class="left">
-		<p><span class="lquo">&ldquo;</span>I have received all kinds of advice over the years but it was 5 minutes with Will that proved to be the most valuable.&rdquo;</p>
-		<cite>
-			<img src="design/images/people/ash.jpg" alt="ash">
-			- Ashleigh Grogan, employee @ <a href="https://squareweave.com.au">Squareweave</a>.
-		</cite>
-	</blockquote>		
-</article>	
-
-<article class="">
-	<blockquote class="left">
-		<p><span class="lquo">&ldquo;</span>Will has a formula for producing great work: he understands your needs, spins it around and makes you articulate them better. Then he meticulously, relentlessly and rapidly executes on this knowledge.&rdquo;</p>
+		<p><span class="lquo">&ldquo;</span>Will has a formula for producing great work: he understands your needs, spins them around and makes you articulate them better. Then he meticulously, relentlessly and rapidly executes on this knowledge.&rdquo;</p>
 		<cite>
 			<img src="design/images/people/olivier.jpg" alt="Jase">		
 			- Oliver Yiptong, 
@@ -131,6 +119,16 @@
 	</blockquote>		
 </article>		
 
+<article class="">
+	<blockquote>
+		<p><span class="lquo">&ldquo;</span>Practically all situations benefit<br> from Will&rsquo;s involvement.&rdquo;</p>
+		<cite>
+			<img src="design/images/people/frenchie.jpg" alt="buddy">
+			- Frenchie. Dear friend, 
+			<a href="https://www.linkedin.com/in/sampstewart">Head of Technology @ Culture Amp.</a>
+		</cite>
+	</blockquote>		
+</article>	
 
 <article class="alt">
 	<blockquote class="left">
@@ -143,15 +141,15 @@
 </article>
 
 <article class="">
-	<blockquote>
-		<p><span class="lquo">&ldquo;</span>Practically all situations benefit<br> from Will&rsquo;s involvement.&rdquo;</p>
+	<blockquote class="left">
+		<p><span class="lquo">&ldquo;</span>An hour of talking to Will was more valuable than months of conversations with other people. He is honest, funny, astute and unbelievably generous.&rdquo;</p>
 		<cite>
-			<img src="design/images/people/frenchie.jpg" alt="buddy">
-			- Frenchie. Dear friend, 
-			<a href="https://www.linkedin.com/in/sampstewart">InfoSec, VC and People Geek.</a>
+			<img src="design/images/people/melissa.png" alt="Melissa">
+			- Melissa Ng, Founder,
+			<a href="http://melewi.net/">Melewi</a>
 		</cite>
 	</blockquote>		
-</article>		
+</article>		 
 
 <article class="alt">
 	<blockquote class="left">
@@ -165,8 +163,9 @@
 </article>
 
 <article class="">
-	<blockquote class="">
-		<p><span class="lquo">&ldquo;</span>It&rsquo;s simply not possible to obtain the same caliber of quality and craftsmanship from anyone else.&rdquo;</p>
+	<blockquote class="left">
+		<p><span class="lquo">&ldquo;</span>Will is one of those rare talents who eclipses any competition.<p> 
+		<p>It&rsquo;s simply not possible to obtain the same caliber of quality and craftsmanship from anyone else.&rdquo;</p>
 		<cite>
 			<img src="design/images/people/michelle.jpg" alt="buddy">		
 			- Michelle Steigerwalt, 
@@ -175,30 +174,20 @@
 	</blockquote>		
 </article>	
 
-
 <article class="alt">
-	<blockquote class="left">
-		<p><span class="lquo">&ldquo;</span>An hour of talking to Will was more valuable than months of conversations with other people. He is honest, funny, astute and unbelievably generous.&rdquo;</p>
-		<cite>
-			<img src="design/images/people/melissa.png" alt="Melissa">
-			- Melissa Ng, Founder,
-			<a href="http://melewi.net/">Melewi</a>
-		</cite>
-	</blockquote>		
-</article>		 
+
+	<h3>Share the love.</h3>
+	<p>If you&rsquo;re into testimonials, take one from me:</p>
+	
+	<dl>
+		<dt><i class="ss-heart" style="font-size:24px; line-height:36px;"></i></dt>
+		<dd><a href="http://luke.gg/" target="_blank">Luke Giuliani</a> is my dearest friend, and partner in crime. <br><br>He&rsquo;s also probably the most committed, ethical, and blisteringly intelligent person you&rsquo;ll ever meet. Take any opportunity to work with him.<br><br>There are </dd>
+	</dl>
+</article>
 
 <article class="footer">
 	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
 	<img src="design/images/aside/yeah.gif">
-</article>
-
-<article id="speaking">
-
-	<h3>I sincerely hope that this was as <br class="sm">awkward for you as it was for me.</h3>
-	<p>But seriously, if you want a testimonial, take mine:</p>
-	<p><a href="http://luke.gg/" target="_blank">Luke Giuliani</a> is my dear friend and partner in crime.</p>
-	<p>He&rsquo;s also one of the most steadfast, ethical, blindingly intelligent and profoundly caring people you&rsquo;ll ever meet. A hidden gem who doesn&rsquo;t toot his own horn.</p>
-	<p>Go make friends with him. &lt;3</p>
 </article>
 
 
