--- a/htdocs/love.html
+++ b/htdocs/love.html
@@ -181,7 +181,7 @@
 	
 	<dl>
 		<dt><i class="ss-heart" style="font-size:24px; line-height:36px;"></i></dt>
-		<dd><a href="http://luke.gg/" target="_blank">Luke Giuliani</a> is my dearest friend, and partner in crime. <br><br>He&rsquo;s also probably the most committed, ethical, and blisteringly intelligent person you&rsquo;ll ever meet. Take any opportunity to work with him.<br><br>There are </dd>
+		<dd><a href="http://luke.gg/" target="_blank">Luke Giuliani</a> is my dearest friend, and partner in crime. <br><br>He&rsquo;s also probably the most committed, ethical, and blisteringly intelligent person you&rsquo;ll ever meet. Take any opportunity to work with him.</dd>
 	</dl>
 </article>
 
