--- a/htdocs/love.html
+++ b/htdocs/love.html
@@ -163,8 +163,7 @@
 </article>
 
 <article class="">
-	<blockquote class="left">
-		<p><span class="lquo">&ldquo;</span>Will is one of those rare talents who eclipses any competition.<p> 
+	<blockquote class="">
 		<p>It&rsquo;s simply not possible to obtain the same caliber of quality and craftsmanship from anyone else.&rdquo;</p>
 		<cite>
 			<img src="design/images/people/michelle.jpg" alt="buddy">		
