--- a/htdocs/love.html
+++ b/htdocs/love.html
@@ -164,7 +164,7 @@
 
 <article class="">
 	<blockquote class="">
-		<p>It&rsquo;s simply not possible to obtain the same caliber of quality and craftsmanship from anyone else.&rdquo;</p>
+		<p>Will is one of those rare talents who eclipses any competition. We have done several projects together under extreme pressure, during which times he has never failed to deliver anything less than astounding results.</p>
 		<cite>
 			<img src="design/images/people/michelle.jpg" alt="buddy">		
 			- Michelle Steigerwalt, 
