make the bio funnier because bios are very boring

--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -140,9 +140,32 @@
 	<a data-nav class="btn btn-back" href="#speaker-themes"><i class="ss-left"></i> Themes</a>
 	<a data-nav class="btn btn-next" href="#speaker-rider"><i class="ss-right"></i> Speaker Rider</a>
 
-	<h2>Speaker Bio</h2>
-	<h3>50 words</h3>
-	<p>Will made his first dollar selling stolen lemons at age 6. His father taught him to code a year later. He's since founded multiple companies in digital, education and social enterprise. He delivers keynotes to big companies and starts small ones. In his spare time he doesn't have any.</p>
+	<h2>Bio</h2>
+	<h3>In brief:</h3>
+	<p>Will made his first dollar selling stolen lemons at age 6. His father taught him to code a year later. He's consistently failed to get a real job,  instead founding multiple companies across digital, education and social enterprise.</p>
+	<p>He delivers keynotes to big companies and starts small ones.</p>
+	<p>In his spare time he doesn't have any.</p>
+
+	<h3>Longer version:</h3>
+	<p>Will made his first dollar selling stolen lemons at age 6. The margins were incredible. His father taught him to code a year later.</p>
+	<p>Will wanted to be a social worker, but didn't get the grades, and came very close to failing high school entirely. Instead, he had a short-lived professional career as an actor and a grossly unprofessional career in a metal band.</p>
+	<p>He also formed a close relationship with his grandfather, as mentor and teacher.</p>
+
+	<p>Will's first successful exit was at 19 years old, from a London-based IT training organisation. The resulting funds were used to start a mental health charity helping young people in the Melbourne punk scene, a web development company and a record label.</p>
+	<p>All of these ventures eventually failed.</p>
+	<p>Later, a series of mishaps resulted in Will founding one of Melbourne's <a href="http://squareweave.com.au/" target="_blank">leading digital agencies</a>, a <a href="http://gracefitzroy.com/">cafe</a>, and an online <a href="https://fitzroyacademy.com/" target="_blank">social impact school</a>, all of which seem to be working quite well.</p>
+	<p>Unprofessionally speaking, he's crowdfunded an international DJ tour, built a <a href="http://speakerdiversity.com/" target="_blank">speaker diversity initiative</a>, a charity evaluation startup, worked with <a href="https://torrentfreak.com/pirate-bay-launches-dedicated-promo-bay-to-help-artists-121129/" target="_blank">internet criminals</a> and filled a warehouse loft with nearly 10,000 balloons.</p>
+	<p>Despite a complete lack of qualifications, he's written and lectured courses in digital and social entrepreneurship at two Australian universities.</p>
+	<p>As, investor advisor and occasional chair, Will sits on the board of a <a href="http://willdayble.com/work">handful</a> of Australian businesses.</p>
+	<p>According to the Head of Technology at Culture Amp, "Practically all situations benefit from Will's involvement."</p>	
+	<p>At 32 (citrus crimes forgotten) he's a mostly functional member of society and is paid to fly around the world making flappy noises with his lips to motivate large groups of people, which is a very strange thing to do if you think about it.</p>
+	<p>His teachers were proven correct; Will has consistently failed to get a real job.</p>
+	<p>He lives in Carlton, Melbourne, with a neuroscientist and two cats, all three dearly beloved.</p>
+	<p>In his spare time, Will doesn't have any.</p>
+
+
+<!--
+	<p>Will made his first dollar selling stolen lemons at age 6. His father tried to teach him code a year later. He's since founded multiple companies in digital, education and social enterprise. He delivers keynotes to big companies and starts small ones. In his spare time he doesn't have any.</p>
 	
 	<h3>Longer</h3>
 	<p>Will made his first dollar selling stolen lemons at age 6. His father taught him to code a year later. He's since founded multiple companies in digital, education and social enterprise.</p>
@@ -150,9 +173,10 @@
 	<p>Speaking across the world, from auditorium-filling keynotes to intimate masterclasses and executive roundtables, Will helps tiny and huge organisations to take action on the difficult stuff.</p>
 	<p>He sits on the boards of a few Aussie businesses and mentors numerous folks in local and international startup communities.</p>
 	<p>In his spare time, Will doesn’t have any.</p>		
+-->
 	<hr id="pics">
-	<h3>Hi res pics</h3>
-	<p>Click to open in a new window.</p>
+	<h3>Hi-res pictures</h3>
+	<p>Click to open hi-res copies in a new window.</p>
 	<p>
 		<a class="biopic" target="_blank" href="design/images/bio/will-dayble-laugh.jpg">
 			<img class="" src="design/images/aside/laff.jpg" alt="will-dayble">
